# uSculpt

./: .gitattributes  .gitignore  .gitmodules  09_illumination_models.vert  CMakeLists.txt  MakefileWin.bat  README.md  ShaderBrush.comp  ShaderBrushing.vert  ShaderFragment.frag  ShaderIntersection.comp  ShaderIntersection.geom  ShaderRendering.frag  ShaderVertex.vert  Shader_Brushing.vert  Shader_Standard.frag  TODO.txt  intersection.frag  intersection.geom  intersection.vert  uSculpt.cpp
include/usculpt/: mesh.h  model.h  shader.h  texture.h
include/utils/: camera.h  intersection.h  mesh.h  mesh_v1.h  model.h  model_v1.h  physics_v1a.h  shader.h  shader_v1.h  texture.h
libs/glad/: CMakeLists.txt
libs/glad/include/: glad.h
libs/glad/src/: glad.c
libs/glm/glm/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/win/: Bullet3Common.lib  BulletCollision.lib  BulletDynamics.lib  IrrXML.lib  LinearMath.lib  assimp-vc142-mt.lib  glfw3.lib  minizip.lib  zlib.lib
